Start consolidating models and creating DB, Request, and Response models. Add initial mapper framework
