# docs/swagger.yaml
@@ -1,67 +1,48 @@
 definitions:
-  gorm.DeletedAt:
-    properties:
-      time:
-        type: string
-      valid:
-        description: Valid is true if Time is not NULL
-        type: boolean
-    type: object
-  models.DebtDBEntry:
+  api.DebtResponse:
     properties:
       amount:
         type: number
-      createdAt:
-        type: string
       currency:
         type: string
-      deletedAt:
-        $ref: '#/definitions/gorm.DeletedAt'
       id:
         type: integer
       owedByUserId:
         type: integer
+      owedByUserName:
+        type: string
       owedToUserId:
         type: integer
-      updatedAt:
+      owedToUserName:
         type: string
     type: object
-  models.Exchange:
+  api.Exchange:
     properties:
       date:
         type: string
       fromCurrency:
         type: string
       rate:
-        format: float64
         type: number
       toCurrency:
         type: string
     type: object
-  models.ExchangeDBEntry:
+  api.ExchangeSummary:
     properties:
-      createdAt:
-        type: string
       date:
         type: string
-      deletedAt:
-        $ref: '#/definitions/gorm.DeletedAt'
       fromCurrency:
         type: string
       id:
         type: integer
       rate:
-        format: float64
         type: number
       toCurrency:
         type: string
-      updatedAt:
-        type: string
     type: object
-  models.Payment:
+  api.Payment:
     properties:
       amount:
-        format: float64
         type: number
       date:
         type: string
@@ -80,49 +61,35 @@ definitions:
       toExchangeRate:
         type: string
     type: object
-  models.PaymentDBEntry:
+  api.PaymentResponse:
     properties:
       amount:
         type: number
-      createdAt:
-        type: string
       date:
         type: string
       debtors:
         items:
-          $ref: '#/definitions/models.UserDBEntry'
+          $ref: '#/definitions/api.UserSummary'
         type: array
-      deletedAt:
-        $ref: '#/definitions/gorm.DeletedAt'
       description:
         type: string
       exchange:
-        $ref: '#/definitions/models.ExchangeDBEntry'
-      exchangeID:
-        type: integer
+        $ref: '#/definitions/api.ExchangeSummary'
       id:
         type: integer
-      payerID:
-        type: integer
-      updatedAt:
-        type: string
+      payer:
+        $ref: '#/definitions/api.UserSummary'
     type: object
-  models.User:
+  api.User:
     properties:
       name:
         type: string
     type: object
-  models.UserDBEntry:
+  api.UserSummary:
     properties:
-      createdAt:
-        type: string
-      deletedAt:
-        $ref: '#/definitions/gorm.DeletedAt'
       id:
         type: integer
       name:
-        type: string
-      updatedAt:
         type: string
     type: object
 info:
@@ -211,7 +178,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Exchange'
+            $ref: '#/definitions/api.Exchange'
         "400":
           description: Bad Request
           schema:
@@ -236,7 +203,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.DebtDBEntry'
+              $ref: '#/definitions/api.DebtResponse'
             type: array
         "404":
           description: Not Found
@@ -263,7 +230,7 @@ paths:
           schema:
             additionalProperties:
               items:
-                $ref: '#/definitions/models.DebtDBEntry'
+                $ref: '#/definitions/api.DebtResponse'
               type: array
             type: object
         "500":
@@ -304,7 +271,7 @@ paths:
         name: payment
         required: true
         schema:
-          $ref: '#/definitions/models.Payment'
+          $ref: '#/definitions/api.Payment'
       produces:
       - application/json
       responses:
@@ -374,7 +341,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.PaymentDBEntry'
+            $ref: '#/definitions/api.PaymentResponse'
         "404":
           description: Not Found
           schema:
@@ -399,7 +366,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.PaymentDBEntry'
+              $ref: '#/definitions/api.PaymentResponse'
             type: array
         "500":
           description: Internal Server Error
@@ -419,7 +386,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.User'
+              $ref: '#/definitions/api.UserSummary'
             type: array
         "500":
           description: Internal Server Error
@@ -439,7 +406,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/models.User'
+          $ref: '#/definitions/api.User'
       produces:
       - application/json
       responses:
