# internal/models/api/user.go
@@ -1,0 +1,10 @@
+package api
+
+type User struct {
+	Name string `json:"name"`
+}
+
+type UserSummary struct {
+	ID   uint   `json:"id"`
+	Name string `json:"name"`
+}
