# internal/models/db/exchange.go
@@ -1,0 +1,17 @@
+package db
+
+import (
+	"time"
+
+	"gorm.io/gorm"
+)
+
+type ExchangeDBEntry struct {
+	gorm.Model
+	FromCurrency string    `gorm:"uniqueIndex:idx_exchange_lookup"`
+	ToCurrency   string    `gorm:"uniqueIndex:idx_exchange_lookup"`
+	Date         time.Time `gorm:"uniqueIndex:idx_exchange_lookup;type:date"`
+	Rate         float64
+}
+
+func (ExchangeDBEntry) TableName() string { return "exchange_rates" }
